--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,9 +39,9 @@ layout: compress
                         <a class="btn zoombtn" href="{{ site.url }}/posts">
                         Blog
                         </a>
-                        <a class="btn zoombtn" href="{{ site.url }}/projects">
+                        <!-- <a class="btn zoombtn" href="{{ site.url }}/projects">
                             Projects
-                        </a>
+                        </a> -->
                         <!-- <a class="btn zoombtn" href="{{ site.url }}/personal">
                         Personal
                         </a>
